cluster/manifests/whisper-worker/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whisper-worker
  labels:
    name: whisper-worker
    # whisper-worker uses nfs
    pod-security.kubernetes.io/enforce: baseline
