cluster/manifests/whisper-worker/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: whisper-worker
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: whisper-worker
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
