cluster/manifests/whisper-worker/overlays/dev/service_entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: huggingface.co
spec:
  exportTo:
    - .
  hosts:
    - huggingface.co
  location: MESH_EXTERNAL
  ports:
    - name: https
      number: 443
      protocol: HTTPS
  resolution: DNS
