cluster/manifests/whisper-worker/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: whisper-worker
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: whisper-worker
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./huggingface.co
        - ./whisper-worker-minio.whisper-worker.svc.cluster.local
        - ./whisper-worker-redis-haproxy.whisper-worker.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
