cluster/manifests/whisper-worker/overlays/dev/virtual_service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: huggingface.co
spec:
  exportTo:
    - .
  hosts:
    - huggingface.co
  gateways:
    - mesh
    - istio-egressgateway
  tls:
    - match:
        - gateways:
            - mesh
          port: 443
          sniHosts:
            - huggingface.co
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            port:
              number: 443
    - match:
        - gateways:
            - istio-egressgateway
          port: 443
          sniHosts:
            - huggingface.co
      route:
        - destination:
            host: huggingface.co
            port:
              number: 443
